[gd_scene load_steps=20 format=2]

[ext_resource path="res://pitbull2-removebg.png" type="Texture" id=1]
[ext_resource path="res://boss.gd" type="Script" id=2]
[ext_resource path="res://music/Tieng_cho_hu.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 39.0
height = 48.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("audio4:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 53, 54, 55, 56 ]
}

[sub_resource type="Animation" id=4]
resource_name = "go"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle2"
length = 2.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52 ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "go"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "idle2"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachine" id=13]
states/attack/node = SubResource( 6 )
states/attack/position = Vector2( 975, 99 )
states/go/node = SubResource( 7 )
states/go/position = Vector2( 533, 99 )
states/idle2/node = SubResource( 8 )
states/idle2/position = Vector2( 752, 99 )
transitions = [ "go", "idle2", SubResource( 9 ), "idle2", "go", SubResource( 10 ), "idle2", "attack", SubResource( 11 ), "attack", "idle2", SubResource( 12 ) ]
start_node = "idle2"

[sub_resource type="AnimationNodeStateMachinePlayback" id=14]

[sub_resource type="CircleShape2D" id=15]
radius = 205.119

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 48.5, 73 )

[node name="boss" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -110 )
scale = Vector2( 0.686047, 0.690625 )
texture = ExtResource( 1 )
hframes = 6
vframes = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, -68 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/attack = SubResource( 3 )
anims/go = SubResource( 4 )
anims/idle2 = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 13 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 14 )

[node name="truytung2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="truytung2"]
position = Vector2( 0, -64 )
shape = SubResource( 15 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="." groups=["dog"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2.5, -68 )
shape = SubResource( 16 )

[node name="audio4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="truytung2" to="." method="_on_truytung2_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
